(images) Fix horizontal scrolling of real pixels images on IE

--- a/astrobin/static/astrobin/scss/astrobin.scss
+++ b/astrobin/static/astrobin/scss/astrobin.scss
@@ -2752,7 +2752,7 @@ div.token-input-dropdown {
 
     .astrobin-image-container {
       figure {
-        overflow: initial;
+        overflow: visible;
       }
 
       img {
